--- a/package.json
+++ b/package.json
@@ -26,9 +26,9 @@
   ],
   "dependencies": {
     "frappe-gantt": "0.3.0",
-    "moment": "2.24.0",
-    "react": "16.13.1",
-    "react-dom": "16.13.1"
+    "moment": "^2.24.0",
+    "react": "^16.13.1",
+    "react-dom": "^16.13.1"
   },
   "files": [
     "src"
